# luna-streams

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  benchmark.py  docker-compose.yml  pyproject.toml  requirements.txt
luna_streams/: __main__.py  app.py  config.py  main.py
luna_streams/api/: routes.py  schemas.py
luna_streams/heads/: mlp_heads.py  summary_decoder.py
luna_streams/integration/: context_injector.py  delta_tracker.py  memory_bridge.py  neuralsleep_hook.py
luna_streams/streams/: base_stream.py  ema_buffer.py  state_manager.py  user_model.py
scripts/: convert_mamba_2.8b.sh
tests/: test_api.py  test_ema_buffer.py  test_event_schema.py  test_memory_bridge.py  test_stream.py
training/: TRAINING.md  train.py
training/configs/: stream1_user.yaml  stream1_user_2.8b.yaml
training/data_prep/: build_event_sequences.py  export_luna_data.py  generate_labels.py  generate_labels_claude.py
